--- a/style.htm
+++ b/style.htm
@@ -17,4 +17,10 @@
 .checks {
 	padding: 10px;
 }
+span.flat-group {
+	margin-left: 10px;
+	background: #eff;
+	padding: 4px;
+	display: inline-block;
+}
 </style>
