render_ref, .docsec class only shows when targeted

--- a/style.htm
+++ b/style.htm
@@ -16,11 +16,18 @@
 }
 .checks {
 	padding: 10px;
+	font-size: small;
 }
 span.flat-group {
 	margin-left: 10px;
 	background: #eff;
 	padding: 4px;
 	display: inline-block;
+}
+.docsec {
+	display: none;
+}
+.docsec:target {
+	display: inherit;
 }
 </style>
